# Defer

./: Contributing.md  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Greet.svelte  MainView.svelte  Navbar.svelte  Tab.svelte
